--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^7.0.0",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "webpack-cli": "^4.8.0"
   },
   "eslintConfig": {
     "root": true,
