--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0",
+    "vue": "^3.0.11",
     "vue-class-component": "^8.0.0-0"
   },
   "devDependencies": {
@@ -27,8 +27,9 @@
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^7.0.0",
-    "typescript": "^4.2.4",
-    "webpack-cli": "^4.8.0"
+    "sass": "^1.34.1",
+    "sass-loader": "^10.1.1",
+    "typescript": "^4.2.4"
   },
   "eslintConfig": {
     "root": true,
