--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "vue": "^3.0.11",
-    "vue-class-component": "^8.0.0-0"
+    "vue-class-component": "^8.0.0-0",
+    "vue-image-kit": "^0.2.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.18.0",
